--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon express.js"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "connect-flash": "^0.1.1",
